libservices_codegen/tests/fail/invalid_ident.stderr
error: value in `#[service(alias = "value")]` is not a valid ident
 --> $DIR/invalid_ident.rs:5:1
  |
5 | #[service(alias = 42)]
  | ^
